--- a/GoingOn/Frontend/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/GoingOn/Frontend/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,6 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
+@using Frontend.Areas.HelpPage
 @using GoingOn.Areas.HelpPage
 @using GoingOn.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
