--- a/GoingOn/FrontendWebRole/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/GoingOn/FrontendWebRole/Areas/HelpPage/Views/Help/Index.cshtml
@@ -5,7 +5,7 @@
 @model Collection<ApiDescription>
 
 @{
-    ViewBag.Title = "ASP.NET Web API Help Page";
+    ViewBag.Title = "GoingOn API Documentation";
 
     // Group APIs by controller
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
@@ -24,7 +24,7 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                API to interact with GoingOn web service.
             </p>
         </div>
     </section>
